force-app/main/default/objects/Brand_Fleet_Station__c/Brand_Fleet_Station__c.object-meta.xml
<CustomObject>
    <description>Fleet Rental fleet stations / dealerships in Argentina that offer rental vehicles.</description>
    <label><Brand> Fleet Station</label>
    <nameField>
        <label>Station Number</label>
        <displayFormat>FLT-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel><Brand> Fleet Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>