force-app/main/default/objects/Brand_Fleet_Station__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Street address of the fleet station.</description>
    <inlineHelpText>Full street address.</inlineHelpText>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>