force-app/main/default/objects/Brand_Fleet_Station__c/fields/Fuel_Types__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Types__c</fullName>
    <description>Fuel types available at this station.</description>
    <inlineHelpText>Nafta, Diesel, Hybrid, PHEV.</inlineHelpText>
    <label>Fuel Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nafta</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>PHEV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>