force-app/main/default/objects/Brand_Fleet_Station__c/fields/Has_KINTO__c.field-meta.xml
<CustomField>
    <fullName>Has_Fleet Rental__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True when this dealer participates in the Fleet Rental rental program.</description>
    <inlineHelpText>Indicates Fleet Rental availability at this station.</inlineHelpText>
    <label>Has Fleet Rental</label>
    <type>Checkbox</type>
</CustomField>