force-app/main/default/objects/Brand_Fleet_Station__c/fields/Models_Available__c.field-meta.xml
<CustomField>
    <fullName>Models_Available__c</fullName>
    <description>Vehicle models currently available for rental at this station.</description>
    <inlineHelpText>Models offered at this station.</inlineHelpText>
    <label>Models Available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SW4</fullName>
            </value>
            <value>
                <fullName>Hilux DC</fullName>
            </value>
            <value>
                <fullName>Hilux SC</fullName>
            </value>
            <value>
                <fullName>Yaris HB</fullName>
            </value>
            <value>
                <fullName>Yaris HB TOP</fullName>
            </value>
            <value>
                <fullName>Yaris HB AT</fullName>
            </value>
            <value>
                <fullName>Corolla</fullName>
            </value>
            <value>
                <fullName>Corolla HV</fullName>
            </value>
            <value>
                <fullName>Corolla Cross HV</fullName>
            </value>
            <value>
                <fullName>Etios HB</fullName>
            </value>
            <value>
                <fullName>HIACE</fullName>
            </value>
            <value>
                <fullName>RAV4 PHEV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>