force-app/main/default/objects/Brand_Fleet_Station__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <description>Specific neighborhood / barrio within the zone (e.g., "Vicente López").</description>
    <inlineHelpText>Neighborhood for fine-grained location matching.</inlineHelpText>
    <label>Neighborhood</label>
    <length>80</length>
    <type>Text</type>
</CustomField>