force-app/main/default/objects/Brand_Fleet_Station__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Contact phone number for the station.</description>
    <inlineHelpText>Public-facing phone for reservations.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>