force-app/main/default/objects/Brand_Fleet_Station__c/fields/Station_Name__c.field-meta.xml
<CustomField>
    <fullName>Station_Name__c</fullName>
    <description>Display name of the fleet station / dealership (e.g., "TREOS Vicente López").</description>
    <externalId>true</externalId>
    <inlineHelpText>Public-facing name of the station.</inlineHelpText>
    <label>Station Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>