force-app/main/default/objects/Brand_Fleet_Station__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <description>Geographic zone for the fleet station (used by routing logic to find a station near the customer).</description>
    <inlineHelpText>CABA, GBA Norte, GBA Sur, GBA Oeste, or Interior.</inlineHelpText>
    <label>Zone</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CABA</fullName>
                <default>true</default>
                <label>CABA</label>
            </value>
            <value>
                <fullName>GBA Norte</fullName>
            </value>
            <value>
                <fullName>GBA Sur</fullName>
            </value>
            <value>
                <fullName>GBA Oeste</fullName>
            </value>
            <value>
                <fullName>Interior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>